Mob registry now done through MobType enums, Added NPCs, Separated WalkingBehaviour into two behaviours that are part of AnimationBehaviour, Added a single entity mob behaviour for Rohana

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,6 @@ commands:
   removemobs:
     description: Removes all registered mobs
     usage: /removeMobs
+  mobsinfo:
+    description: Lists all registered mobs
+    usage: /mobsInfo
