--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ author: Offz
 main: com.offz.spigot.custommobs.CustomMobs
 api-version: 1.13
 softdepend: [DeeperWorld]
-depend: [MineInAbyss]
+depend: [MineInAbyss, LibsDisguises]
 
 prefix: CuMobs
 description: A mod that lets you climb and get exhausted
