--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,31 @@
-group 'com.offz.spigot'
+group 'com.github.MineInAbyss'
 version '2.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'maven'
+
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
     repositories {
-        maven { url = 'https://papermc.io/repo/repository/maven-public/' }
+        maven { url "https://papermc.io/repo/repository/maven-public/" }
         maven { url "http://repo.dmulloy2.net/nexus/repository/public/" }
+        maven { url "http://maven.enginehub.org/repo/" }
+        maven { url "http://repo.md-5.net/content/groups/public/" }
+//        maven { url "https://maven.sk89q.com/repo/" }
     }
     mavenLocal()
 }
+
 dependencies {
     compile group: 'com.derongan.minecraft', name: 'MineInAbyss', version: '0.5b-SNAPSHOT'
     compile group: 'com.derongan.minecraft', name: 'DeeperWorld', version: '1.0-SNAPSHOT'
     compile group: 'LibsDisguises', name: 'LibsDisguises', version: '9.8.0-SNAPSHOT'
     compile 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC repo
-    compile 'org.spigotmc:spigot:1.13.2-R0.1-SNAPSHOT' // The full Spigot server with no shadowing. Requires mavenLocal.
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.4.0" //ProtocolLib
+    compile 'org.spigotmc:spigot:1.13.2+' // The full Spigot server with no shadowing. Requires mavenLocal.
+//    compile group: 'com.github.ysl3000.pathfindergoalapi', name: 'PathfinderAPI', version: '1.3.3.5'
+//    compile 'com.sk89q.worldguard:worldguard-bukkit:7.0.0+'
 }
 
 //Move into plugins folder
