Started move to CustomMob interface + improved spawning's chunk sorting + QOL changes

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,14 +12,18 @@ description: A mod that lets you climb and get exhausted
 commands:
   cmrm:
     description: Removes all registered mobs
+    aliases: [cmrm, cmremove]
     usage: /cmrm
   cminfo:
     description: Lists all registered mobs
+    aliases: [cmi, cminfo]
     usage: /cminfo
   cms:
     description: Spawns a custom mob
+    aliases: [cms, cmspawn]
     usage: /cms <Mob Name>
   cml:
     description: Lists all registered mobs
+    aliases: [cml, cmlist]
     usage: /cml
 
