--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,13 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
     repositories {
-        maven { url "https://papermc.io/repo/repository/maven-public/" }
-        maven { url "http://repo.dmulloy2.net/nexus/repository/public/" }
-        maven { url "http://maven.enginehub.org/repo/" }
-        maven { url "http://repo.md-5.net/content/groups/public/" }
-//        maven { url "https://maven.sk89q.com/repo/" }
+        maven { url 'https://papermc.io/repo/repository/maven-public/' }
+        maven { url 'http://repo.dmulloy2.net/nexus/repository/public/' }
+        maven { url 'http://maven.enginehub.org/repo/' }
+        maven { url 'http://repo.md-5.net/content/groups/public/' }
+//        maven { url 'https://maven.sk89q.com/repo/' }
     }
     mavenLocal()
 }
@@ -26,6 +27,21 @@ dependencies {
     compile 'org.spigotmc:spigot:1.13.2+' // The full Spigot server with no shadowing. Requires mavenLocal.
 //    compile group: 'com.github.ysl3000.pathfindergoalapi', name: 'PathfinderAPI', version: '1.3.3.5'
 //    compile 'com.sk89q.worldguard:worldguard-bukkit:7.0.0+'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
 
 //Move into plugins folder
