--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,13 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.derongan.minecraft', name: 'MineInAbyss', version: '0.5b-SNAPSHOT'
-    compile group: 'com.derongan.minecraft', name: 'DeeperWorld', version: '1.0-SNAPSHOT'
-    compile group: 'LibsDisguises', name: 'LibsDisguises', version: '9.8.0-SNAPSHOT'
-    compile 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC repo
-    compile 'org.spigotmc:spigot:1.13.2+' // The full Spigot server with no shadowing. Requires mavenLocal.
-//    compile group: 'com.github.ysl3000.pathfindergoalapi', name: 'PathfinderAPI', version: '1.3.3.5'
-//    compile 'com.sk89q.worldguard:worldguard-bukkit:7.0.0+'
+    implementation group: 'com.derongan.minecraft', name: 'MineInAbyss', version: '0.5b-SNAPSHOT'
+    implementation group: 'com.derongan.minecraft', name: 'DeeperWorld', version: '1.0-SNAPSHOT'
+    implementation group: 'LibsDisguises', name: 'LibsDisguises', version: '9.8.0-SNAPSHOT'
+    implementation 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC repo
+    implementation 'org.spigotmc:spigot:1.13.2+' // The full Spigot server with no shadowing. Requires mavenLocal.
+//    implementation group: 'com.github.ysl3000.pathfindergoalapi', name: 'PathfinderAPI', version: '1.3.3.5'
+//    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.0+'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
