--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.MineInAbyss'
-version '2.0-SNAPSHOT'
+version '2.1-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'maven'
@@ -20,13 +20,13 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'com.derongan.minecraft', name: 'MineInAbyss', version: '0.5b-SNAPSHOT'
-    implementation group: 'com.derongan.minecraft', name: 'DeeperWorld', version: '1.0-SNAPSHOT'
-    implementation group: 'LibsDisguises', name: 'LibsDisguises', version: '9.8.0-SNAPSHOT'
+//    implementation group: 'com.derongan.minecraft', name: 'MineInAbyss', version: '0.5b-SNAPSHOT'
+//    implementation group: 'com.derongan.minecraft', name: 'DeeperWorld', version: '1.0-SNAPSHOT'
+    implementation 'LibsDisguises:LibsDisguises:9.8.0-SNAPSHOT'
     implementation 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC repo
     implementation 'org.spigotmc:spigot:1.13.2+' // The full Spigot server with no shadowing. Requires mavenLocal.
 //    implementation group: 'com.github.ysl3000.pathfindergoalapi', name: 'PathfinderAPI', version: '1.3.3.5'
-//    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.0+'
+    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.0'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
