--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'custom-mobs'
 
-includeBuild '../MineInAbyss/'
-includeBuild '../DeeperWorld'
+//includeBuild '../MineInAbyss/'
+//includeBuild '../DeeperWorld'
