--- a/build.gradle
+++ b/build.gradle
@@ -10,23 +10,20 @@ repositories {
     mavenCentral()
     jcenter()
     repositories {
-        maven { url 'https://papermc.io/repo/repository/maven-public/' }
-        maven { url 'http://repo.dmulloy2.net/nexus/repository/public/' }
-        maven { url 'http://maven.enginehub.org/repo/' }
-        maven { url 'http://repo.md-5.net/content/groups/public/' }
-//        maven { url 'https://maven.sk89q.com/repo/' }
+        maven { url 'https://papermc.io/repo/repository/maven-public/' } //PaperMC
+        maven { url 'http://repo.dmulloy2.net/nexus/repository/public/' } //Spigot
+        maven { url 'http://repo.md-5.net/content/groups/public/' } //LibsDisguises
+        maven { url 'https://maven.sk89q.com/repo/' } //WorldGuard
     }
-    mavenLocal()
+//    mavenLocal()
 }
 
 dependencies {
-//    implementation group: 'com.derongan.minecraft', name: 'MineInAbyss', version: '0.5b-SNAPSHOT'
-//    implementation group: 'com.derongan.minecraft', name: 'DeeperWorld', version: '1.0-SNAPSHOT'
-    implementation 'LibsDisguises:LibsDisguises:9.8.0-SNAPSHOT'
-    implementation 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC repo
-    implementation 'org.spigotmc:spigot:1.13.2+' // The full Spigot server with no shadowing. Requires mavenLocal.
-//    implementation group: 'com.github.ysl3000.pathfindergoalapi', name: 'PathfinderAPI', version: '1.3.3.5'
-    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.0'
+    implementation 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC
+    implementation 'org.spigotmc:spigot:1.13.2+' // Spigot
+    implementation 'LibsDisguises:LibsDisguises:9.8.0-SNAPSHOT' //LibsDisguises
+    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.0' //WorldGuard
+//    implementation 'com.github.ysl3000.pathfindergoalapi:PathfinderAPI:1.3.3.5'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -41,7 +38,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 artifacts {
     archives sourcesJar
-    archives javadocJar
+//    archives javadocJar
 }
 
 //Move into plugins folder
