--- a/src/main/resources/spawns.yml
+++ b/src/main/resources/spawns.yml
@@ -2,112 +2,85 @@
 # spawn-pos: the type of position for the mob to be spawned in | AIR/GROUND/OVERHANG | ex. AIR | default: GROUND
 
 regions:
-  -
-    name: Orth
+  - name: Orth
     spawns:
-      -
-        mob: Fuwagi
+      - mob: Fuwagi
         min-amount: 2
         max-amount: 3
         min-light: 7
         radius: 6
         block-whitelist: [GRASS_BLOCK]
-      -
-        mob: Okibo
+      - mob: Okibo
         priority: 0.1
         block-whitelist: [GRASS_BLOCK, STONE_BRICKS]
         sections: [city]
-      -
-        mob: Hammerbeak
+      - mob: Hammerbeak
         priority: 0.1
         spawn-pos: AIR
-  -
-    name: Edge of the Abyss
+  - name: Edge of the Abyss
     spawns:
-      -
-        reuse: Orth:Fuwagi
-      -
-        reuse: Orth:Hammerbeak
-      -
-        mob: Benikuchinawa
+      - reuse: Orth:Fuwagi
+      - reuse: Orth:Hammerbeak
+      - mob: Benikuchinawa
         priority: 0.05
         spawn-pos: AIR
-      -
-        mob: Silkfang
+      - mob: Silkfang
         block-whitelist: [STONE, COBBLESTONE]
-  -
-    name: Forest of Temptation
+  - name: Forest of Temptation
     spawns:
-      -
-        reuse: Orth:Fuwagi
-      -
-        reuse: Edge of the Abyss:Benikuchinawa
-      -
-        mob: Corpse Weeper
+      - reuse: Orth:Fuwagi
+      - reuse: Edge of the Abyss:Benikuchinawa
+      - mob: Corpse Weeper
         base priority: 0.3
         spawn-pos: AIR
-      -
-        reuse: Orth:Fuwagi
+      - reuse: Orth:Fuwagi
         mob: Rohana
         min-light: 0
         max-light: 7
-      -
-        mob: Ottobas
+      - mob: Ottobas
         max-amount: 2
         radius: 10
         block-whitelist: [GRASS_BLOCK]
-      -
-        mob: Inbyo
+      - mob: Inbyo
         sections: [l2s5]
         min-amount: 4
         max-amount: 8
         radius: 5
         min-y: 140
         max-light: 7
-  -
-    name: Great Fault
+  - name: Great Fault
     spawns:
-      -
-        reuse: Orth:Fuwagi
+      - reuse: Orth:Fuwagi
         mob: Neritantan
         min-amount: 3
         max-amount: 5
         block-whitelist: [GRASS_BLOCK, ANDESITE, WHITE_CONCRETE]
-      -
-        mob: Madokajack
+      - mob: Madokajack
         base priority: 0.3
         spawn-pos: AIR
-  -
-    name: The Goblet of Giants
+  - name: The Goblet of Giants
     spawns:
-      -
-        mob: Ottobas
+      - mob: Ottobas
         min-amount: 1
         max-amount: 2
         base priority: 0.1
         block-whitelist: [GRASS_BLOCK]
-      -
-        mob: Tamaugachi
+      - mob: Tamaugachi
         base priority: 0.5
         block-whitelist: [WATER]
-      -
-        mob: Kuongatari
+      - mob: Kuongatari
         min-amount: 2
         max-amount: 4
         radius: 6
         block-whitelist: [GRASS_BLOCK]
-      -
-        reuse: Forest of Temptation:Rohana
+      - reuse: Forest of Temptation:Rohana
         min-amount: 3
         max-amount: 5
-      -
-        mob: Kazura
+      - mob: Kazura
         min-amount: 2
         max-amount: 4
         radius: 6
         block-whitelist: [GRASS_BLOCK]
 
-  # -
-  #   name: Sea of Corpses
-  # -
-  #   name: The Capital of the Unreturned
+#  - name: Sea of Corpses
+#  - name: The Capital of the Unreturned
