Switched from PaperMC API to Spigot API for compatibility

--- a/build.gradle
+++ b/build.gradle
@@ -10,19 +10,22 @@ repositories {
     mavenCentral()
     jcenter()
     repositories {
-        maven { url 'https://papermc.io/repo/repository/maven-public/' } //PaperMC
+//        maven { url 'https://papermc.io/repo/repository/maven-public/' } //PaperMC
         maven { url 'http://repo.dmulloy2.net/nexus/repository/public/' } //Spigot
+        maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
         maven { url 'http://repo.md-5.net/content/groups/public/' } //LibsDisguises
-        maven { url 'https://maven.sk89q.com/repo/' } //WorldGuard
+        maven { url 'https://maven.sk89q.com/repo/' } //WorldGuard/Edit
     }
 //    mavenLocal()
 }
 
 dependencies {
-    implementation 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC
-    implementation 'org.spigotmc:spigot:1.13.2+' // Spigot
+//    implementation 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC
+    implementation 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT' //Spigot
+    implementation 'org.spigotmc:spigot:1.13.2-R0.1-SNAPSHOT' // NMS
     implementation 'LibsDisguises:LibsDisguises:9.8.0-SNAPSHOT' //LibsDisguises
     implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.0' //WorldGuard
+//    implementation 'com.sk89q.worldedit:worldedit-bukkit:7.0.0' //WorldEdit
 //    implementation 'com.github.ysl3000.pathfindergoalapi:PathfinderAPI:1.3.3.5'
 }
 
@@ -37,8 +40,9 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 artifacts {
+    //feel free to comment these out for faster compilation
     archives sourcesJar
-//    archives javadocJar
+    archives javadocJar
 }
 
 //Move into plugins folder
