--- a/Mobzy-API/build.gradle
+++ b/Mobzy-API/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     implementation 'org.spigotmc:spigot:1.13.2-R0.1-SNAPSHOT' // NMS
     implementation 'LibsDisguises:LibsDisguises:9.8.0-SNAPSHOT' //LibsDisguises
     implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.0' //WorldGuard
-    compile group: 'de.erethon', name: 'headlib', version: '3.0.1'
+//    compile group: 'de.erethon', name: 'headlib', version: '3.0.1'
 //    implementation 'com.sk89q.worldedit:worldedit-bukkit:7.0.0' //WorldEdit
 //    implementation 'com.github.ysl3000.pathfindergoalapi:PathfinderAPI:1.3.3.5'
 }
