--- a/Mobzy-API/build.gradle
+++ b/Mobzy-API/build.gradle
@@ -1,10 +1,24 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '5.0.0'
+}
+
+repositories {
+    maven {
+        name = 'dre-repo'
+        url = 'https://erethon.de/repo/'
+    }
+}
+
 dependencies {
 //    implementation 'com.destroystokyo.paper:paper-api:1.13.2-R0.1-SNAPSHOT' // PaperMC
-    implementation 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT' //Spigot
-    implementation 'org.spigotmc:spigot:1.13.2-R0.1-SNAPSHOT' // NMS
-    implementation 'LibsDisguises:LibsDisguises:9.8.0-SNAPSHOT' //LibsDisguises
-    implementation 'com.sk89q.worldguard:worldguard-bukkit:7.0.0' //WorldGuard
-//    compile group: 'de.erethon', name: 'headlib', version: '3.0.1'
+    compileOnly 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT' //Spigot
+    compileOnly 'org.spigotmc:spigot:1.13.2-R0.1-SNAPSHOT' // NMS
+    compileOnly 'LibsDisguises:LibsDisguises:9.8.0-SNAPSHOT' //LibsDisguises
+    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.0' //WorldGuard
+    compileOnly group: 'de.erethon', name: 'headlib', version: '3.0.1'
+    //TODO merge guiy changes and use the main epo
+    implementation 'com.github.Mineinabyss:guiy:offz-additions-SNAPSHOT'
+//    implementation group: 'com.github.MineInAbyss', name: 'guiy', version: "master-SNAPSHOT"
 //    implementation 'com.sk89q.worldedit:worldedit-bukkit:7.0.0' //WorldEdit
 //    implementation 'com.github.ysl3000.pathfindergoalapi:PathfinderAPI:1.3.3.5'
 }
