--- a/AbyssialCreatures/src/main/resources/mobs.yml
+++ b/AbyssialCreatures/src/main/resources/mobs.yml
@@ -1,94 +1,325 @@
 config:
   name: Abyssial Creatures
-  icon:
+  icon: DIAMOND-BLOCK
 # Passive
 Neritantan:
   model: 2
-  max_health: 10
-  movement_speed: 0.25
-  tempt_items: [CARROT, POTATO, BEETROOT]
+  max-health: 10
+  movement-speed: 0.25
+  tempt-items: [CARROT, POTATO, BEETROOT]
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: MUTTON
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRaw Neritantan Meat
+      drop-chance: 0.5
 Fuwagi:
   model: 5
-  max_health: 10
-  movement_speed: 0.25
-  tempt_items: [CARROT, APPLE]
+  max-health: 10
+  movement-speed: 0.25
+  tempt-items: [CARROT, APPLE]
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: RABBIT
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRaw Fuwagi Meat
+      drop-chance: 0.5
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: RABBIT_FOOT
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rFuwagi Foot
+      drop-chance: 0.1
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: RABBIT_HIDE
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rFuwagi Hide
+      drop-chance: 0.2
 Okibo:
   model: 38
-  max_health: 50
-  movement_speed: 0.25
+  max-health: 50
+  movement-speed: 0.25
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: PORK
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRaw Okibo Meat
+      min-amount: 1
+      max-amount: 2
+    - material: LEATHER
+      min-amount: 1
+      max-amount: 2
 # Hostile
 Inbyo:
   model: 8
-  max_health: 30
-  movement_speed: 0.4
-  attack_damage: 5
-  follow_range: 64
-  #drops: BEEF, BLACK WOOL
+  max-health: 30
+  movement-speed: 0.4
+  attack-damage: 5
+  follow-range: 64
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: BLACK_WOOL
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rInbyo Fur
+          lore:
+            - It smells very gross
+      min-amount: 1
+      max-amount: 3
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: RAW_BEEF
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRaw Inbyo Meat
 Rohana:
   model: 14
-  max_health: 7
-  movement_speed: 0.3
-  # drops: GLOWSTONE DUST
+  max-health: 6
+  movement-speed: 0.3
+  adult: false
+  attack-damage: 3
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: GLOWSTONE_DUST
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRohana Dust
+      drop-chance: 0.8
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: BLAZE_ROD
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRohana Tail
+          lore:
+            - It glows faintly
+      drop-chance: 0.4
 Tamaugachi:
   model: 17
-  max_health: 100
-  movement_speed: 0.4
-  attack_damage: 7
-  follow_range: 64
-  # Nether wart, Quartz
+  max-health: 100
+  movement-speed: 0.4
+  attack-damage: 7
+  follow-range: 64
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: QUARTZ
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rOrb Piercer Spike
+          lore:
+            - They look very pointy
+      min-amount: 5
+      max-amount: 8
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: NETHER_WART
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rOrb Piercer Nose Fragment
+          lore:
+            - Squishy
+      min-amount: 1
+      max-amount: 3
 Silkfang:
   model: 26
-  max_health: 20
-  movement_speed: 0.3
-  attack_damage: 0.5
-  # drops: STRING
+  max-health: 20
+  movement-speed: 0.3
+  attack-damage: 0.5
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: STRING
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rSilkfang Silk
+          lore:
+            - Finer than a Spider's
+      min-amount: 1
+      max-amount: 3
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: SPIDER_EYE
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rSilkfang Eye
+          lore:
+            - It stares back at you
+      drop-chance: 0.2
 Kuongatari:
   model: 35
-  max_health: 7
-  movement_speed: 0.3
-  attack_damage: 0.2
-  #drops: LIME DYE
+  max-health: 7
+  movement-speed: 0.3
+  attack-damage: 0.5
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: LIME_DYE
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rKuongatari Dye
+          lore:
+            - A very vibrant green
+      drop-chance: 0.4
 Nakikabane:
   model: 41
-  max_health: 7
-  movement_speed: 0.3
-  attack_damage: 0.5
+  max-health: 7
+  movement-speed: 0.3
+  attack-damage: 0.5
 Tesuchi:
   model: 44
-  max_health: 20
-  movement_speed: 0.3
-  attack_damage: 0.5
+  max-health: 20
+  movement-speed: 0.3
+  attack-damage: 0.5
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: DRIED_KELP
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rTesuchi Scales
+          lore:
+            - Crispy
+          min-amount: 1
+          max-amount: 2
+      drop-chance: 0.5
 Ottobas:
   model: 47
-  max_health: 80
-  movement_speed: 0.4
-  attack_damage: 7
-  follow_range: 64
+  max-health: 35
+  movement-speed: 0.4
+  attack-damage: 5
+  follow-range: 30
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        type: PORK
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRaw Ottobas Meat
+      max-amount: 1
 # Flying
 Corpseweeper:
   name: Corpse Weeper
   model: 11
-  max_health: 1
-  follow_range: 50
+  max-health: 20
+  follow-range: 50
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: CHICKEN
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRaw Corpse Weeper Meat
+      min-amount: 1
+      max-amount: 2
+    - material: FEATHER
+      min-amount: 2
+      max-amount: 4
 Madokajack:
   model: 20
-  max_health: 20
-  follow_range: 50
+  max-health: 20
+  follow-range: 50
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: PRISMARINE_SHARD
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rMadokajack Scales
+      min-amount: 2
+      max-amount: 3
+    - material: BONE
+      min-amount: 1
+      max-amount: 2
 Hammerbeak:
   model: 23
-  max_health: 20
-  follow_range: 50
+  max-health: 20
+  follow-range: 50
+  attack-damage: 5
   drops:
-    - material: PORKCHOP
-      min_amount: 2
-      max_amount: 4
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: CHICKEN
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rRaw Hammerbeak Meat
+      min-amount: 1
+      max-amount: 2
+    - material: FEATHER
+      min-amount: 2
+      max-amount: 4
 Kazura:
   model: 29
-  max_health: 20
-  follow_range: 50
+  max-health: 10
+  follow-range: 50
+  attack-damage: 2
+  drops:
+    - material: INK_SAC
+      min-amount: 1
+      max-amount: 2
 Benikuchinawa:
   model: 32
-  max_health: 20
-  follow_range: 50
+  max-health: 20
+  follow-range: 50
+  attack-damage: 10
+  drops:
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: POPPED_CHORUS_FRUIT
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rSplitjaw Scales
+      min-amount: 2
+      max-amount: 3
+    - item:
+        ==: org.bukkit.inventory.ItemStack
+        v: 1
+        type: SHULKER_SHELL
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: §rSplitjaw Shell
+      drop-chance: 0.15
+    - material: SLIME_BALL
+      drop-chance: 0.5
 NPC:
   model: 1
