--- a/AbyssialCreatures/src/main/resources/spawns.yml
+++ b/AbyssialCreatures/src/main/resources/spawns.yml
@@ -1,48 +1,66 @@
 # block-whitelist: if set, the blocks this mob can spawn on | List of Materials | ex. [GRASS_BLOCK, STONE] | default: no whitelist
 # spawn-pos: the type of position for the mob to be spawned in | AIR/GROUND/OVERHANG | ex. AIR | default: GROUND
-
+config:
+  name: Abyssial Creatures
+  icon: DIAMOND_BLOCK
 regions:
-  - name: Orth
+  - name: Template
     spawns:
       - mob: Fuwagi
         min-amount: 2
         max-amount: 3
         min-light: 7
-        radius: 6
-        block-whitelist: [GRASS_BLOCK]
-      - mob: Okibo
-        priority: 0.1
-        block-whitelist: [GRASS_BLOCK, STONE_BRICKS]
-        sections: [city]
+        radius: 10
+        block-whitelist:
+          - GRASS_BLOCK
       - mob: Hammerbeak
-        priority: 0.1
+        priority: 0.2
         spawn-pos: AIR
-  - name: Edge of the Abyss
-    spawns:
-      - reuse: Orth:Fuwagi
-      - reuse: Orth:Hammerbeak
       - mob: Benikuchinawa
         priority: 0.05
         spawn-pos: AIR
       - mob: Silkfang
-        block-whitelist: [STONE, COBBLESTONE]
+  - name: Orth
+    spawns:
+      - reuse: Template:Fuwagi
+      - mob: Okibo
+        priority: 0.1
+        block-whitelist:
+          - GRASS_BLOCK
+          - STONE_BRICKS
+  - name: Edge of the Abyss
+    spawns:
+      - reuse: Template:Fuwagi
+      - reuse: Template:Hammerbeak
+      - reuse: Template:Benikuchinawa
+        block-whitelist:
+          - STONE
+          - COBBLESTONE
   - name: Forest of Temptation
     spawns:
-      - reuse: Orth:Fuwagi
-      - reuse: Edge of the Abyss:Benikuchinawa
+      - reuse: Template:Fuwagi
+      - reuse: Template:Hammerbeak
+      - reuse: Template:Benikuchinawa
       - mob: Corpse Weeper
-        base priority: 0.3
+        priority: 0.3
         spawn-pos: AIR
-      - reuse: Orth:Fuwagi
+      - reuse: Template:Fuwagi
         mob: Rohana
         min-light: 0
         max-light: 7
       - mob: Ottobas
-        max-amount: 2
+        priority: 0.6
+        block-whitelist:
+          - GRASS_BLOCK
+      - mob: Tesuchi
+        min-amount: 2
+        max-amount: 5
         radius: 10
-        block-whitelist: [GRASS_BLOCK]
+        block-whitelist:
+          - GRASS_BLOCK
       - mob: Inbyo
-        sections: [l2s5]
+        sections:
+          - l2s5
         min-amount: 4
         max-amount: 8
         radius: 5
@@ -50,29 +68,36 @@ regions:
         max-light: 7
   - name: Great Fault
     spawns:
-      - reuse: Orth:Fuwagi
+      - reuse: Template:Benikuchinawa
+      - reuse: Template:Fuwagi
         mob: Neritantan
         min-amount: 3
         max-amount: 5
-        block-whitelist: [GRASS_BLOCK, ANDESITE, WHITE_CONCRETE]
+        min-light: 2
+        block-whitelist:
+          - GRASS_BLOCK
+          - ANDESITE
+          - WHITE_CONCRETE
       - mob: Madokajack
-        base priority: 0.3
+        priority: 0.3
         spawn-pos: AIR
   - name: The Goblet of Giants
     spawns:
       - mob: Ottobas
         min-amount: 1
         max-amount: 2
-        base priority: 0.1
-        block-whitelist: [GRASS_BLOCK]
+        priority: 0.1
+        block-whitelist:
+          - GRASS_BLOCK
       - mob: Tamaugachi
-        base priority: 0.5
-        block-whitelist: [WATER]
+        block-whitelist:
+          - WATER
       - mob: Kuongatari
         min-amount: 2
         max-amount: 4
         radius: 6
-        block-whitelist: [GRASS_BLOCK]
+        block-whitelist:
+          - GRASS_BLOCK
       - reuse: Forest of Temptation:Rohana
         min-amount: 3
         max-amount: 5
@@ -80,7 +105,5 @@ regions:
         min-amount: 2
         max-amount: 4
         radius: 6
-        block-whitelist: [GRASS_BLOCK]
-
-#  - name: Sea of Corpses
-#  - name: The Capital of the Unreturned
+        block-whitelist:
+          - GRASS_BLOCK
