--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 allprojects {
     group = 'com.github.MineInAbyss'
-    version = '2.1-SNAPSHOT'
+    version = plugin_version + '-SNAPSHOT'
 
 }
 
@@ -8,21 +10,32 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
 
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
     repositories {
         mavenCentral()
         jcenter()
         repositories {
 //        maven { url 'https://papermc.io/repo/repository/maven-public/' } //PaperMC
             maven { url 'http://repo.dmulloy2.net/nexus/repository/public/' } //Spigot
+            maven { url 'https://erethon.de/repo/' } //HeadLib
             maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
-            maven { url 'http://repo.md-5.net/content/groups/public/' } //LibsDisguises
-            maven { url 'https://maven.sk89q.com/repo/' } //WorldGuard/Edit
-            maven { url 'https://jitpack.io' }
-            maven { url 'https://erethon.de/repo/' }
+            maven { url 'https://jitpack.io' } //JitPack
         }
 //    mavenLocal()
     }
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    dependencies {
+        compileOnly 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT' //Spigot
+        compileOnly 'org.spigotmc:spigot:1.13.2-R0.1-SNAPSHOT' // NMS
+        compileOnly 'de.erethon:headlib:3.0.1'
+//        implementation 'com.github.yannicklamprecht.PathfindergoalAPI:PathfindergoalAPI:1.3.3.6'
+    }
+
+    processResources {
+        from(sourceSets.main.resources.srcDirs) {
+            filter ReplaceTokens, tokens: [plugin_version: plugin_version]
+        }
+    }
 }
