--- a/Mobzy-API/src/main/resources/config.yml
+++ b/Mobzy-API/src/main/resources/config.yml
@@ -1,11 +1,12 @@
 # Send debug messages
 debug: false
 doMobSpawns: true
-passiveMobCap: 20
-hostileMobCap: 20
-flyingMobCap: 5
 spawnSearchRadius: 128
 minChunkSpawnRad: 2
 maxChunkSpawnRad: 7
 maxSpawnAmount: 50
 spawnTaskDelay: 500
+mobCaps:
+  passive: 10
+  hostile: 20
+  flying: 5
