--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,23 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+}
+
 allprojects {
     group = 'com.github.MineInAbyss'
     version = plugin_version + '-SNAPSHOT'
-
-    ext{
-        //Put your plugins folder directory here! If it is left as '', jars won't be copied
-        plugin_path = ''
-    }
-}
-
-subprojects {
+    apply plugin: 'kotlin'
     apply plugin: 'java'
     apply plugin: 'maven'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
+
+    ext {
+        //Put your plugins folder directory here! If it is left as '', jars won't be copied
+        plugin_path = ''
+    }
 
     repositories {
         mavenCentral()
@@ -38,10 +40,22 @@ subprojects {
     }
 
     dependencies {
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
         compileOnly 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT' //Spigot
         compileOnly 'org.spigotmc:spigot:1.13.2-R0.1-SNAPSHOT' // NMS
         compileOnly 'de.erethon:headlib:3.0.1'
 //        implementation 'com.github.yannicklamprecht.PathfindergoalAPI:PathfindergoalAPI:1.3.3.6'
+    }
+
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
+    compileTestKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
     }
 
     processResources {
