--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,8 @@
-rootProject.name = 'Mobzy'
+//rootProject.name = 'Mobzy'
 
 include 'Mobzy-API', 'AbyssalCreatures'
+
+if(useLocalGuiy.toBoolean()) {
+    include ':guiy'
+    project(':guiy').projectDir = new File('../guiy')
+}
