--- a/build.gradle
+++ b/build.gradle
@@ -17,23 +17,23 @@ subprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    ext {
-        //Put your plugins folder directory here! If it is left as '', jars won't be copied
-        plugin_path = ''
-    }
+    ext.kotlin_version = '1.3.61'
+    ext.plugin_path = '' //Put your plugins folder directory here! If it is left as '', jars won't be copied
 
     repositories {
         mavenCentral()
         jcenter()
         repositories {
-            maven { url 'https://papermc.io/repo/repository/maven-public/' } //PaperMC
             maven {
-                url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+                url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+
+                // As of Gradle 5.1, you can limit this to only those
+                // dependencies you expect from it
                 content {
                     includeGroup 'org.bukkit'
                     includeGroup 'org.spigotmc'
                 }
-            } //Spigot
+            }
             maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
             maven { url 'https://erethon.de/repo/' } //HeadLib
             maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
@@ -45,12 +45,11 @@ subprojects {
     }
 
     dependencies {
-        compileOnly 'LibsDisguises:LibsDisguises:9.8.1-SNAPSHOT' //LibsDisguises
-        compileOnly 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT' //Spigot
-        compileOnly 'org.spigotmc:spigot:1.13.2-R0.1-SNAPSHOT' // NMS
-        compileOnly 'de.erethon:headlib:3.0.1'
+        compileOnly 'org.spigotmc:spigot-api:1.15-R0.1-SNAPSHOT' //Spigot
+        compileOnly 'org.spigotmc:spigot:1.15-R0.1-SNAPSHOT' // NMS
+        compileOnly 'LibsDisguises:LibsDisguises:9.8.5-SNAPSHOT' //LibsDisguises
+        compileOnly 'de.erethon:headlib:3.0.2'
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-//        implementation 'com.github.yannicklamprecht.PathfindergoalAPI:PathfindergoalAPI:1.3.3.6'
     }
 
     compileKotlin {
