--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,8 @@
-//rootProject.name = 'Mobzy'
+rootProject.name = 'Mobzy'
 
 include 'Mobzy-API', 'AbyssalCreatures'
 
+//FIXME this screws up the project hierarchy but only sometimes
 if(useLocalGuiy.toBoolean()) {
     include ':guiy'
     project(':guiy').projectDir = new File('../guiy')
