Cleaning up and work on some pathfinder goals

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,8 @@
-rootProject.name = 'Mobzy'
+//FIXME this screws up the project hierarchy but only sometimes
 
 include 'Mobzy-API', 'AbyssalCreatures'
 
-//FIXME this screws up the project hierarchy but only sometimes
 if(useLocalGuiy.toBoolean()) {
-    include ':guiy'
+    include 'guiy'
     project(':guiy').projectDir = new File('../guiy')
 }
