--- a/Mobzy-API/build.gradle
+++ b/Mobzy-API/build.gradle
@@ -12,14 +12,19 @@ dependencies {
     implementation 'com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721'
     implementation 'org.nield:kotlin-statistics:1.2.1'
 //        implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0" // JVM dependency
-    api project(':idofront')
+
     if (useLocalGuiy.toBoolean()) implementation project(':guiy')
-    else implementation 'com.github.Mineinabyss:guiy:master-SNAPSHOT'
+    else implementation 'com.github.mineinabyss:guiy:kotlin-dsl-SNAPSHOT'
+
+    if (useLocalIdofront.toBoolean()) implementation project(':idofront')
+    else implementation 'com.github.mineinabyss:idofront:master-SNAPSHOT'
 }
 
 shadowJar {
     getArchiveBaseName().set("Mobzy")
     getArchiveClassifier().set(null)
+    relocate 'com.derongan.minecraft.guiy', "com.derongan.minecraft.guiy.${project.group}.${project.name}"
+    relocate 'com.mineinabyss.idofront', "com.mineinabyss.idofront.${project.group}.${project.name}"
 
     minimize {
         exclude(dependency("org.jetbrains.kotlin:.*"))
