--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,8 @@ if (useLocalGuiy.toBoolean()) {
     include 'guiy'
     project(':guiy').projectDir = new File('../guiy')
 }
-include 'idofront'
-project(':idofront').projectDir = new File('../idofront')
+
+if (useLocalIdofront.toBoolean()) {
+    include 'idofront'
+    project(':idofront').projectDir = new File('../idofront')
+}
