--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -15,6 +15,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - uses: derongan/nmsaction@v1
+        with:
+          rev: 1.15
+      - name: Install nms into m2
+        run: mkdir -p $HOME/.m2/repository && cp -a nms-build/.m2/repository/. $HOME/.m2/repository
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Publish artifact
