Update idofront version

--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     else implementation 'com.github.mineinabyss:guiy:kotlin-dsl-SNAPSHOT'
 
     if (useLocalIdofront.toBoolean()) implementation project(':idofront')
-    else implementation 'com.mineinabyss:idofront:0.1.1-alpha-5'
+    else implementation 'com.mineinabyss:idofront:0.1.2-alpha.6'
 }
 
 shadowJar {
