--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
       - name: Load gradle cache
-      - uses: actions/cache@v1
+        uses: actions/cache@v1
         id: cache
         with:
           path: ~/.gradle/caches
